<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="2dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="left|center_vertical"
            android:paddingTop="11dp"
            android:text="@string/date_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="75dp" />

        <TextView
            android:id="@+id/expenseDateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/defaultText" />

        <ImageButton
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/datePickerDescription"
            android:onClick="onClickDatePicker"
            android:src="@drawable/ic_action_change_date" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="2dp"
        android:stretchColumns="3" >

        <TableRow>

            <TextView
                android:id="@+id/bankLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/bankNameLabel"
                android:textColor="@color/defaultText"
                android:textSize="16dip"
                android:width="75dp" />

            <Spinner
                android:id="@+id/bankNameSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/bankNamePrompt"
                android:textColor="@color/defaultText" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/expense_amount_label"
                android:textColor="@color/defaultText"
                android:textSize="16dip"
                android:width="75dp" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" >


            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/category_label"
                android:textColor="@color/defaultText"
                android:textSize="16dip" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:prompt="@string/categoryPrompt"
                android:textColor="@color/defaultText" />

            <ImageButton
                android:id="@+id/addCategoryButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/addCategoryButtonDescription"
                android:onClick="onClickAddCategory"
                android:src="@drawable/ic_add_category" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/expenseNotes"
                android:textColor="@color/defaultText"
                android:textSize="16dip"
                android:width="75dp" />

            <EditText
                android:id="@+id/notesEditText1"
                style="@style/styleName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/notesHint"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/smsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/smsBody"
                android:textColor="@color/defaultText"
                android:textSize="16dip"
                android:width="75dp" />

            <TextView
                android:id="@+id/smsBodyText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:padding="4dp"
                android:hint="@string/notesHint" />
        </TableRow>
    </TableLayout>

</LinearLayout>
</ScrollView>